change the project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite---react---typescript---tailwindcss---shadcn-ui-starter-pack",
+  "name": "mon-portfolio-v3",
   "private": true,
   "version": "0.0.0",
   "type": "module",
